--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <video class="video-intro" poster="https://lh3.googleusercontent.com/leQfeMVuRSXAv1CIkPi3rs3WeQ3TEOHNPDBzH-3SixNWyvrjvQ1qUhRcdzdpfb8cowP4oZTyjEffNEWSphEo7wmyHv-ItQbJWH1ZqL6u0OTxUYZIbtRHR_Ve7U7z11kqFyCkAuThL_z_7YZ7_k58atn2Q7JAOdByJCOKIrY9yGfkSEMz81LvuKGFU_IarO7iCsdDXbns2yWcgg8Oqoc6FaUY1hnnpOnbCJH3X9NVqHHK9NiUNPUsOe8TWBBfjAjbR2ELzeYgY13xjNP5odvzhnGcDkN4pvbGwzybKGt0SKIipEo88dCl0Z6eM39wjy6h2kTWNe-r7QMtrduaTCj4pjZX9KbDvnB5etAP4narWtM0JqM98jMTsDL-tU7hAQcKrQE_Os918KV9xpAb-ckqej0DBQDkgiGOaKoBpJzQonFWMHl0AnCmlZoleoXLttOTAcEINxtRt2-Fpm-oT0K82CLEc7jfmb3fJkzN9Dzg4asSYcOlb-dYC76ddaCsN2IlOfxLp92uWujzhg7zgBHfR5d9JprCEhPtv9XoHnUPjRFYE0JnvMsM9V5i16byVcD9i-93QSzQTLRTlYopXd-CxjpYb97KZMMAQAu-8QnLUCHYGSRtv4SYH7JXO082mfv3p7U5qK_fly5_XsMnwEVZB1tuwuFnpVAZFcODEi3XzQ3Ok6BN602xqtg=w1324-h883-no " playsinline autoplay
       muted loop>
-      <source src="https://photos.app.goo.gl/gDCdhLWz3g7Fj2fA8" type="image">
+      <source src="https://photos.app.goo.gl/gTUCSikbxQwWMCo9A" type="video/mp4">
     </video>
 
     <!-- Mask & flexbox options-->
