--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       // If the count down is finished, write some text
       if (distance < 0) {
         clearInterval(x);
-        document.getElementById("time-counter").innerHTML = "IT'S TIME TO WATCH DOCHEY";
+        document.getElementById("time-counter").innerHTML = "WATCH NOW!";
       }
     }, 1000);
 
