--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
 
 
         <h4 class="mb-4">
-          <strong>Still Counting! Please Wait!</strong>
+          <strong>below link updated</strong>
         </h4>
 
 
-        <a target="_blank" href="https://ibb.co/Hh9syr7" class="btn btn-outline-white btn-lg">Dochey 
+        <a target="_blank" href="https://youtu.be/bayhkXZU4zg" class="btn btn-outline-white btn-lg">Dochey 
           watch here!📺
         </a>
       </div>
