--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div class="text-center white-text mx-5 wow fadeIn">
 
         <h1 class="display-4 mb-4">
-          <strong>Loop video until reach video 1M😜</strong>
+          <strong>Loop video until reach 1M😜</strong>
         </h1>
 
         <!-- Time Counter -->
